# Franka_Dual_Arm_PtoP

./: .gitignore  Play  README.md
L_Franka_Gripper/: CMakeLists.txt
L_Franka_Gripper/include/kistar_hand/: Hand_Arm_Setting.h  shm.h
L_Franka_Gripper/libfranka/common/: CMakeLists.txt
L_Franka_Gripper/libfranka/include/franka/: model.h
L_Franka_Gripper/test/: CMakeLists.txt  L_Franka_Gripper.cpp
R_Franka_KISTAR_Hand/: CMakeLists.txt  cleanup_shm.sh  fix_gpg_key.sh  install_ros2.sh  isaac_ros2_bridge.py  monitor_shm.py  run_robot_and_bridge.sh  send_arm_target.py  test_subscriber.py  view_graph.sh
R_Franka_KISTAR_Hand/backup_build/: CMakeCache.txt  FrankaTargets.cmake  Makefile  cmake_install.cmake  compile_commands.json
R_Franka_KISTAR_Hand/backup_build/libfranka/common/: Makefile  cmake_install.cmake
R_Franka_KISTAR_Hand/backup_build/test/: Makefile  R_Franka_KISTAR_Hand  cmake_install.cmake
R_Franka_KISTAR_Hand/include/kistar_hand/: Hand_Arm_Setting.h  Predefined_Motion.h  Tillted_Test_Motion.h  shm.h
R_Franka_KISTAR_Hand/install/: local_setup.sh  setup.sh
R_Franka_KISTAR_Hand/install/kistar_hand_ros2/include/kistar_hand_ros2/kistar_hand_ros2/msg/: franka_arm_state.h  franka_arm_state.hpp  franka_arm_target.h  franka_arm_target.hpp  hand_state.h  hand_state.hpp  hand_target.h  hand_target.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
R_Franka_KISTAR_Hand/install/kistar_hand_ros2/include/kistar_hand_ros2/kistar_hand_ros2/msg/detail/: franka_arm_state__builder.hpp  franka_arm_state__functions.c  franka_arm_state__functions.h  franka_arm_state__rosidl_typesupport_fastrtps_c.h  franka_arm_state__rosidl_typesupport_fastrtps_cpp.hpp  franka_arm_state__rosidl_typesupport_introspection_c.h  franka_arm_state__rosidl_typesupport_introspection_cpp.hpp  franka_arm_state__struct.h  franka_arm_state__struct.hpp  franka_arm_state__traits.hpp  franka_arm_state__type_support.c  franka_arm_state__type_support.cpp  franka_arm_state__type_support.h  franka_arm_state__type_support.hpp  franka_arm_target__builder.hpp  franka_arm_target__functions.c  franka_arm_target__functions.h  franka_arm_target__rosidl_typesupport_fastrtps_c.h  franka_arm_target__rosidl_typesupport_fastrtps_cpp.hpp  franka_arm_target__rosidl_typesupport_introspection_c.h  franka_arm_target__rosidl_typesupport_introspection_cpp.hpp  franka_arm_target__struct.h  franka_arm_target__struct.hpp  franka_arm_target__traits.hpp  franka_arm_target__type_support.c  franka_arm_target__type_support.cpp  franka_arm_target__type_support.h  franka_arm_target__type_support.hpp  hand_state__builder.hpp  hand_state__functions.c  hand_state__functions.h  hand_state__rosidl_typesupport_fastrtps_c.h  hand_state__rosidl_typesupport_fastrtps_cpp.hpp  hand_state__rosidl_typesupport_introspection_c.h  hand_state__rosidl_typesupport_introspection_cpp.hpp  hand_state__struct.h  hand_state__struct.hpp  hand_state__traits.hpp  hand_state__type_support.c  hand_state__type_support.cpp  (+16 more)
R_Franka_KISTAR_Hand/install/kistar_hand_ros2/local/lib/python3.10/dist-packages/kistar_hand_ros2/: _kistar_hand_ros2_s.ep.rosidl_typesupport_c.c  _kistar_hand_ros2_s.ep.rosidl_typesupport_fastrtps_c.c  (+1 more)
R_Franka_KISTAR_Hand/install/kistar_hand_ros2/local/lib/python3.10/dist-packages/kistar_hand_ros2-0.1.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
R_Franka_KISTAR_Hand/install/kistar_hand_ros2/share/ament_index/resource_index/rosidl_interfaces/: kistar_hand_ros2
R_Franka_KISTAR_Hand/install/kistar_hand_ros2/share/kistar_hand_ros2/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
R_Franka_KISTAR_Hand/install/kistar_hand_ros2/share/kistar_hand_ros2/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_kistar_hand_ros2__rosidl_generator_cExport-noconfig.cmake  export_kistar_hand_ros2__rosidl_generator_cExport.cmake  export_kistar_hand_ros2__rosidl_generator_cppExport.cmake  export_kistar_hand_ros2__rosidl_generator_pyExport-noconfig.cmake  export_kistar_hand_ros2__rosidl_generator_pyExport.cmake  export_kistar_hand_ros2__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_kistar_hand_ros2__rosidl_typesupport_fastrtps_cExport.cmake  export_kistar_hand_ros2__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_kistar_hand_ros2__rosidl_typesupport_fastrtps_cppExport.cmake  kistar_hand_ros2Config.cmake  kistar_hand_ros2__rosidl_typesupport_cExport-noconfig.cmake  kistar_hand_ros2__rosidl_typesupport_cExport.cmake  kistar_hand_ros2__rosidl_typesupport_cppExport-noconfig.cmake  kistar_hand_ros2__rosidl_typesupport_cppExport.cmake  kistar_hand_ros2__rosidl_typesupport_introspection_cExport-noconfig.cmake  kistar_hand_ros2__rosidl_typesupport_introspection_cExport.cmake  kistar_hand_ros2__rosidl_typesupport_introspection_cppExport-noconfig.cmake  kistar_hand_ros2__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
R_Franka_KISTAR_Hand/install/kistar_hand_ros2/share/kistar_hand_ros2/msg/: FrankaArmState.idl  FrankaArmTarget.idl  HandState.idl  HandState.msg  HandTarget.idl
R_Franka_KISTAR_Hand/libfranka/: CMakeLists.txt
R_Franka_KISTAR_Hand/libfranka/common/: CMakeLists.txt
R_Franka_KISTAR_Hand/libfranka/examples/: CMakeLists.txt
R_Franka_KISTAR_Hand/libfranka/include/franka/: model.h  robot.h
R_Franka_KISTAR_Hand/log/: latest_build
R_Franka_KISTAR_Hand/msg/: FrankaArmState.msg  FrankaArmTarget.msg  HandTarget.msg
R_Franka_KISTAR_Hand/src/: shm_ros2_bridge.cpp
R_Franka_KISTAR_Hand/test/: CMakeLists.txt  R_Franka_KISTAR_Hand.cpp
(+9 files in other folders)
